fixed account creation

--- a/crud/templates/base/base.html
+++ b/crud/templates/base/base.html
@@ -22,6 +22,7 @@
     <script src="{% static 'js/toast_message.js' %}"></script>
     <!-- manage -->
     <script src="{% static 'js/table_filters.js' %}"></script>
+    <script src="{% static 'js/pagination.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     {% block scripts %}{% endblock scripts %}
 </body>
