--- a/crud/templates/web/guest/booking_web.html
+++ b/crud/templates/web/guest/booking_web.html
@@ -331,7 +331,7 @@
           <button type="button" onclick="prevStep()" class="px-8 py-2 bg-red-500 text-white rounded-lg hover:bg-red-600">
             Back
           </button>
-          <button type="button" onclick="validateAndProceed()" class="px-8 py-2 bg-orange-500 text-white rounded-lg hover:bg-orange-600">
+          <button type="button" onclick="validateAndProceed()" class="px-8 py-2 bg-green-500 text-white rounded-lg hover:bg-orange-600">
             Next
           </button>
         </div>
@@ -1226,7 +1226,7 @@ function initializePaymentForm() {
       // For mock payment, simulate processing delay
       await new Promise(resolve => setTimeout(resolve, 1500));
 
-      const response = await fetch('/process-payment/', {
+      const response = await fetch('{% url "process_payment" %}', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
