--- a/crud/templates/web/guest/booking_web.html
+++ b/crud/templates/web/guest/booking_web.html
@@ -111,7 +111,7 @@
 
   <!-- Progress Bar -->
   <div class="max-w-4xl mx-auto mb-8">
-    <div class="w-2/3 h-1 bg-gray-200 mx-auto">
+    <div class="w-full sm:w-2/3 h-1 bg-gray-200 mx-auto">
       <div class="h-full bg-orange-500 transition-all duration-300" style="width: 33%;"></div>
     </div>
   </div>
