--- a/crud/templates/web/guest/guest_account.html
+++ b/crud/templates/web/guest/guest_account.html
@@ -118,7 +118,7 @@
     <!-- User Actions -->
     <div class="flex flex-col sm:flex-row items-stretch sm:items-end space-y-2 sm:space-y-0 sm:space-x-2">
       <!-- Change Password Button -->
-      <button id="changePasswordBtn" class="flex-1 w-[150px] flex items-center justify-center px-6 py-2.5 bg-indigo-600 text-white rounded-md hover:bg-indigo-700 transition-colors min-w-[150px] h-10">
+      <button id="changePasswordBtn" class="flex-1 w-[150px] mt-2 flex items-center justify-center px-6 py-2.5 bg-indigo-600 text-white rounded-md hover:bg-indigo-700 transition-colors min-w-[150px] h-10">
         <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z"/>
         </svg>
