--- a/crud/templates/web/guest/nova_hotel.html
+++ b/crud/templates/web/guest/nova_hotel.html
@@ -272,7 +272,7 @@
   <p class="text-xl max-w-4xl text-center mb-12">
     For any inquiries or special requests, please contact us at +63-9094848123. Our dedicated team is available 24 hours a day to assist you and ensure your stay is exceptional. Whether you need help with reservations or local recommendations, we're here to make your experience seamless and enjoyable.
   </p>
-  <div class="flex space-x-8">
+  <div class="flex space-x-8 mb-24">
     <a href="#" class="text-gray-500 hover:text-gray-900 transition-colors">
       <i class="fa-brands fa-square-facebook text-4xl"></i>
       <span class="sr-only">Facebook page</span>
@@ -656,7 +656,7 @@
       </div>
       <hr class="my-6 sm:mx-auto border-gray-900 lg:my-4"/>
       <div class="sm:flex sm:items-center sm:justify-center">
-          <span class="text-sm text-gray-500 sm:text-center justify-center dark:text-gray-400">© 2023 <a href="https://flowbite.com/" class="hover:underline">Nova Doors Hotel™</a>. All Rights Reserved.
+          <span class="text-sm text-gray-500 sm:text-center justify-center dark:text-gray-400">© 2023 <a href="#home" class="hover:underline">Nova Doors Hotel™</a>. All Rights Reserved.
           </span>
       </div>
     </div>
